testcases/pos/labeled/no_blocking_on_fun_def.bard
let fun f(x: Int): Int = x
in
    42
end
