testcases/neg/eval/fun_wrong_ret_type.bard
let fun f(x): Int = x
in
    f(false)
end
